Develop Pull Req Develop to Main 28 01 25 (#11)
* Create 1239 file

* task-1238-exceptions (#8)

* Add Lessons 44 Exception

* Update Less44Exceptions.java

//comment from Jack extended

* Update Less44Exceptions.java

* Update Less44Exceptions.java //change line 6 conflict

//change line 6 conflict ext

* Change Lessons 44 Exception

* Finish Exception topic

---------

Co-authored-by: “Yauheni <“yauheni.kastsiukou@gmail.com”>

* 1239 commit file change 111

* change in develop

* 1239 functional prog to Develop 28 01 25 (#10)

* Add func prog topic theory only

* Add func prog topic theory only 28 01 25 all last topics

---------

Co-authored-by: “Yauheni <“yauheni.kastsiukou@gmail.com”>

---------

Co-authored-by: “Yauheni <“yauheni.kastsiukou@gmail.com”>